Add formspree form

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       <h3 class="intro-message">
         Hi there! We're getting married!
       </h3>
+      <form action="//formspree.io/declanandrita@gmail.com"
+      method="POST">
+        <input type="text" name="name">
+        <input type="email" name="_replyto">
+        <input type="submit" value="Send">
+      </form>
     </div>
   </section>
 </body>
